Work on db_summariser